# pv021_project

./: CMakeLists.txt  HiddenLayer.cpp  HiddenLayer.h  HiddenLayerSnapshot.h  ImageMaker.cpp  ImageMaker.h  InputLayer.cpp  InputLayer.h  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkExceptions.h  OutputLayer.cpp  OutputLayer.h  OutputLayerSnapshot.h  README.md  algorithms.cpp  algorithms.h  main.cpp
parseData/: inputExample  input_007  input_007_prolonged.txt  output  parse.py
tests/: algorithmsTest.cpp
